--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="icon-circle mb-3 mx-auto">
                     <i class="bi bi-award-fill"></i>
                 </div>
-                <h1 class="display-5 fw-bold text-gradient">ระบบค้นหาใบประกาศนียบัตรการอบรม โครงการ Python</h1>
+                <h1 class="display-5 fw-bold text-gradient">ระบบค้นหาใบประกาศนียบัตรการอบรม โครงการอบรม</h1>
                 <p class="text-muted lead">กรอกชื่อ-นามสกุล ของท่านเพื่อค้นหาและดาวน์โหลดเอกสาร</p>
             </div>
 
@@ -66,5 +66,6 @@
     <!-- Custom JS -->
     <script src="assets/js/script.js"></script>
 </body>
+
 
 </html>
