--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="icon-circle mb-3 mx-auto">
                     <i class="bi bi-award-fill"></i>
                 </div>
-                <h1 class="display-5 fw-bold text-gradient">ระบบค้นหาใบประกาศนียบัตรการอบรม โครงการอบรม</h1>
+                <h1 class="display-5 fw-bold text-gradient">ระบบค้นหาใบเกียรติบัตรการอบรม โครงการอบรมเชิงปฏิบัติการ "ยกระดับทักษะการสอนวิทยาการคำนวณด้วยภาษา python เพื่อการแข่งขัน"</h1>
                 <p class="text-muted lead">กรอกชื่อ-นามสกุล ของท่านเพื่อค้นหาและดาวน์โหลดเอกสาร</p>
             </div>
 
@@ -69,3 +69,4 @@
 
 
 </html>
+
