--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 <div class="icon-circle mb-3 mx-auto">
                     <i class="bi bi-award-fill"></i>
                 </div>
-                <h1 class="display-5 fw-bold text-gradient">ระบบค้นหาใบเกียรติบัตรการอบรม</h1>
-                <p class="text-muted lead">โครงการอบรมเชิงปฏิบัติการ "ยกระดับทักษะการสอนวิทยาการคำนวณด้วยภาษา python เพื่อการแข่งขัน"</p>
+                <h1 class="text-muted lead">ระบบค้นหาใบเกียรติบัตรการอบรม</h1>
+                <p class="text-center mt-5 text-muted small">โครงการอบรมเชิงปฏิบัติการ "ยกระดับทักษะการสอนวิทยาการคำนวณด้วยภาษา python เพื่อการแข่งขัน"</p>
                 <p class="text-muted lead">กรอกชื่อ-นามสกุล ของท่านเพื่อค้นหาและดาวน์โหลดเอกสาร</p>
             </div>
 
@@ -70,5 +70,6 @@
 
 
 </html>
+
 
 
