--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <i class="bi bi-award-fill"></i>
                 </div>
                 <h1 class="text-muted lead">ระบบค้นหาใบเกียรติบัตรการอบรม</h1>
-                <p class="text-center mt-5 text-muted small">โครงการอบรมเชิงปฏิบัติการ "ยกระดับทักษะการสอนวิทยาการคำนวณด้วยภาษา python เพื่อการแข่งขัน"</p>
+                <p class="text-center mt-5 text-muted">โครงการอบรมเชิงปฏิบัติการ "ยกระดับทักษะการสอนวิทยาการคำนวณด้วยภาษา python เพื่อการแข่งขัน"</p>
                 <p class="text-muted lead">กรอกชื่อ-นามสกุล ของท่านเพื่อค้นหาและดาวน์โหลดเอกสาร</p>
             </div>
 
@@ -70,6 +70,7 @@
 
 
 </html>
+
 
 
 
